Show projects wit dayleft of project.
