# src/swagger.yml
@@ -118,7 +118,7 @@ paths:
       operationId: "views.project.get_all"
       tags:
         - "Project"
-      summary: "List of Projects with days remaning to complete"
+      summary: "List of Projects."
       description: "Lis of Projects"
       responses:
         "200":
@@ -128,11 +128,23 @@ paths:
               schema:
                 $ref: "#/components/schemas/Project"
 
+  /projects/dayleft:
+    get:
+      operationId: "views.project.day_left"
+      tags:
+        - "Project"
+      summary: "List of Projects with days remaning to complete"
+      description: "List of Projects with day left"
+      responses:
+        "200":
+          description: "Successfully Projects."
+
+                
   /users:
     get:
       operationId: "views.user.get_all"
       tags:
-        - "Project"
+        - "User"
       summary: "List of user with days remaning to complete"
       description: "Lis of user"
       responses:
@@ -142,6 +154,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Project"
+
+
 components:
   schemas:
     Institution:
